# TFM_SistemaDistribuidoDeDeteccionDeAtques

./: CMakeCache.txt  CMakeLists.txt  app-flash_args  cmake_install.cmake  config.env  flash_args  flasher_args.json  kconfigs.in  ldgen_libraries  ldgen_libraries.in  partitions.csv  project_description.json
MQTT_Brocker/: docker-compose.yml
Memoria/: Borrador_TFM_Sistema_Distribuido_De_Deteccion_De_Ataques_En_Redes_Inhalambricas.odt
bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
components/mqtt_communication/: CMakeLists.txt  mqtt_fragment_buffer.c  mqtt_fragment_buffer.h  network_status.c  network_status.h  requester.c  requester.h
esp-idf/: cmake_install.cmake
gdbinit/: gdbinit  symbols
main/: CMakeLists.txt  main_module.c  main_module.h  sniffer_module.c  sniffer_module.h  wifi_station.c  wifi_station.h
main/Calculation/: entropy.c  entropy.h  estandard_deviation.c  estandard_deviation.h
main/MQTT_Comunication/: mqtt_fragment_buffer.c  mqtt_fragment_buffer.h  network_status.c  network_status.h  requester.c  requester.h
main/attack_detection/: arp_spoofing.c  arp_spoofing.h  beacon_flood.c  beacon_flood.h  deauth_attack.c  deauth_attack.h  evil_twin.c  evil_twin.h  mac_spoofing.c  mac_spoofing.h  traffic_analyzer.c  traffic_analyzer.h
main/detection_methods/: frequency_analysis.c  frequency_analysis.h  mac_analysis.c  mac_analysis.h
main/tools/: arp_table.c  arp_table.h  base64encoding.c  base64encoding.h  centralized_config.c  centralized_config.h  hash_function.c  hash_function.h  l3_processor.c  l3_processor.h  l7_processor.c  l7_processor.h  mac_address_module.c  mac_address_module.h
(+114 files in other folders)
